--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="index.html">click here</a> 
+    <a href="list.html">click here</a> 
     
 </body>
 </html>
